Fix CSS overflow on Firefox

--- a/chromium/pages/popup/style.css
+++ b/chromium/pages/popup/style.css
@@ -84,7 +84,7 @@ input[type='checkbox'] {
 }
 
 input[type='text'] {
-  width: 100%;
+  width: 93%;
   margin-top: 0.4em;
   margin-bottom: 0.4em;
 }
